# rabbit_systeminfo

./: README.md  rabbit_server_config.json
systeminfo/: .gitignore  Cargo.toml  README.md  Rocket.toml
systeminfo/src/: main.rs
systeminfo_client/: .gitignore  Cargo.toml
systeminfo_client/src/: main.rs
